Replace deprecated URL(String) constructor with URI.create().toURL()
The move to Java 21 surfaced deprecation warnings for the java.net.URL(String)
constructor, deprecated because it performs no validation and its parsing is
lenient and inconsistent. The documented replacement is URI.create(s).toURL(),
which parses per RFC 2396 and still throws for a malformed or non-absolute
value -- so the surrounding try/catch behavior is unchanged.

- EmailCommand: the base URL for resolving relative email resources.
- LeaderboardWidget: the discarded URL(image) call that validates an image
  value; kept as URI.create(image).toURL() purely for its throw-on-invalid
  side effect, with a comment noting the result is intentionally discarded.

Leaves the WriterOutputStream(Writer,String) deprecation in WidgetOutputStream
untouched: its builder replacement throws IOException from get(), which would
change a core page-rendering constructor's signature and ripple to callers --
a separate, deliberate change (and the commons-io builder API is cleaner once
the 2.22 jar bump lands), not something to fold into a warnings cleanup.